[metadata]
name = ingraph.aws
version = 0.0.13
description = AWS CloudFormation resources for InGraph.
license = Apache-2.0
license_file = LICENSE
author = lifa.dev
author-email = croak@lifa.dev
url = https://lifa.dev/ingraph
project-urls = 
	Repository = https://github.com/lifadev/ingraph-aws
long-description = file: README.md
long_description_content_type = text/markdown
platform = any
classifiers = 
	Programming Language :: Python
	Programming Language :: Python :: 3.8
	License :: OSI Approved
	License :: OSI Approved :: Apache Software License

[bdist_wheel]
python-tag = py38

[options]
python_requires = >=3.8,<4.0
zip_safe = false
include_package_data = true
packages = find_namespace:
package_dir = 
	=src

[options.packages.find]
where = src

[options.package_data]
ingraph = 
	**/*.pyi
	**/py.typed

[options.extras_require]
dev = 
	autoflake
	black
	isort
	jinja2
	mypy
	pytest
	pytest-cov
	pytest-mock
	pytest-xdist
	rope
	toml
	twine

